@@ -5,25 +5,26 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: Tcl.n,v 1.8 2002/11/11 16:08:28 kennykb Exp $
+'\" RCS: @(#) $Id: Tcl.n,v 1.9 2003/02/01 19:48:23 kennykb Exp $
 '\"
 .so man.macros
 .TH Tcl n "8.1" Tcl "Tcl Built-In Commands"
 .BS
 .SH NAME
-Tcl \- Summary of Tcl language syntax.
+Tcl \- Tool Command Language
+.SH SYNOPSIS
+Summary of Tcl language syntax.
 .BE
-
 .SH DESCRIPTION
 .PP
 The following rules define the syntax and semantics of the Tcl language:
-.IP [1]
+.IP "[1] \fBCommands.\fR"
 A Tcl script is a string containing one or more commands.
 Semi-colons and newlines are command separators unless quoted as
 described below.
 Close brackets are command terminators during command substitution
 (see below) unless quoted.
-.IP [2]
+.IP "[2] \fBEvaluation.\fR"
 A command is evaluated in two steps.
 First, the Tcl interpreter breaks the command into \fIwords\fR
 and performs substitutions as described below.
@@ -36,10 +37,10 @@ The command procedure is free to interpret each of its words
 in any way it likes, such as an integer, variable name, list,
 or Tcl script.
 Different commands interpret their words differently.
-.IP [3]
+.IP "[3] \fBWords.\fR"
 Words of a command are separated by white space (except for
 newlines, which are command separators).
-.IP [4]
+.IP "[4] \fBDouble quotes.\fR"
 If the first character of a word is double-quote (``"'') then
 the word is terminated by the next double-quote character.
 If semi-colons, close brackets, or white space characters
@@ -48,7 +49,7 @@ as ordinary characters and included in the word.
 Command substitution, variable substitution, and backslash substitution
 are performed on the characters between the quotes as described below.
 The double-quotes are not retained as part of the word.
-.IP [5]
+.IP "[5] \fBBraces.\fR"
 If the first character of a word is an open brace (``{'') then
 the word is terminated by the matching close brace (``}'').
 Braces nest within the word: for each additional open
@@ -62,7 +63,7 @@ below, nor do semi-colons, newlines, close brackets,
 or white space receive any special interpretation.
 The word will consist of exactly the characters between the
 outer braces, not including the braces themselves.
-.IP [6]
+.IP "[6] \fBCommand substitution.\fR"
 If a word contains an open bracket (``['') then Tcl performs
 \fIcommand substitution\fR.
 To do this it invokes the Tcl interpreter recursively to process
@@ -74,7 +75,7 @@ substituted into the word in place of the brackets and all of the
 characters between them.
 There may be any number of command substitutions in a single word.
 Command substitution is not performed on words enclosed in braces.
-.IP [7]
+.IP "[7] \fBVariable substitution.\fR"
 If a word contains a dollar-sign (``$'') then Tcl performs \fIvariable
 substitution\fR:  the dollar-sign and the following characters are
 replaced in the word by the value of a variable.
@@ -101,7 +102,7 @@ characters whatsoever except for close braces.
 There may be any number of variable substitutions in a single word.
 Variable substitution is not performed on words enclosed in braces.
 .RE
-.IP [8]
+.IP "[8] \fBBackslash substitution.\fR"
 If a backslash (``\e'') appears within a word then
 \fIbackslash substitution\fR occurs.
 In all cases but those described below the backslash is dropped and
@@ -172,14 +173,14 @@ inserted.
 Backslash substitution is not performed on words enclosed in braces,
 except for backslash-newline as described above.
 .RE
-.IP [9]
+.IP "[9] \fBComments.\fR"
 If a hash character (``#'') appears at a point where Tcl is
 expecting the first character of the first word of a command,
 then the hash character and the characters that follow it, up
 through the next newline, are treated as a comment and ignored.
 The comment character only has significance when it appears
 at the beginning of a command.
-.IP [10]
+.IP "[10] \fBOrder of substitution.\fR"
 Each character is processed exactly once by the Tcl interpreter
 as part of creating the words of a command.
 For example, if variable substitution occurs then no further
@@ -200,7 +201,7 @@ set y [set x 0][incr x][incr x]
 .CE
 will always set the variable \fIy\fR to the value, \fI012\fR.
 .RE
-.IP [11]
+.IP "[11] \fBSubstitution and word boundaries.\fR"
 Substitutions do not affect the word boundaries of a command.
 For example, during variable substitution the entire value of
 the variable becomes part of a single word, even if the variable's
